chore(infographic): add build watch

--- a/packages/infographic/package.json
+++ b/packages/infographic/package.json
@@ -33,6 +33,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "build:watch": "tsc -p tsconfig.json --watch",
     "check:test": "tsc --noEmit -p __tests__",
     "ci": "run-s test build lint",
     "lint": "eslint . --ext .ts,.tsx && npm run check:test",
